Fix spacing and how items condense on main page

--- a/frontend/src/stylesheets/application.scss
+++ b/frontend/src/stylesheets/application.scss
@@ -158,10 +158,11 @@ h1#main-logo{
 }
 
 footer{
+    background-color: rgb(52, 114, 222);
     margin-top: 300px;
     display: flex;
     justify-content: center;
-    position: sticky;
+    // position: sticky;
     bottom: 10px;
     z-index: -1;
     font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif !important;
@@ -287,6 +288,7 @@ footer{
 .team-container{
     display: flex;
     justify-content: space-between;
+    margin-bottom: 5%;
 }
 .image-div{
     width: 100%;
@@ -295,9 +297,14 @@ footer{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 50%;
 }
 
 .team-text{
+    // display: flex;
+    // flex-direction: column;
+    // align-items: flex-end;
+    // text-align: center;
     font-size: 32px;
     font-weight: 600;
     line-height: 1.5;
@@ -316,6 +323,61 @@ footer{
     }
 }
 
+.bottom-container{
+    // display: grid;
+    // grid-template-columns: 50% 50%;
+    // grid-template-rows: 350px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.image-containers{
+    margin-left: 5%;
+}
+
+.image1{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: url("/assets/main-page-bg.jpg");
+    width: 600px;
+    height: 500px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    h4{
+        color: white;
+        font-size: 48px;
+        text-align: center;
+        margin-bottom: 20%;
+        padding-top: 20%;
+        font-family: Freight, HoeflerText-Black, Times New Roman, serif;
+        line-height: 1.5;
+    }
+}
+
+.started-button{
+    top: 70%;
+    right: 35%;
+    width: 200px;
+    height: 50px;
+    background-color: rgb(52, 114, 222);
+    font-weight: 500;
+    font-size: 20px;
+    border: none;
+    color: white;
+    cursor: pointer;
+}
+
+.image2{
+    background: url('https://images.wallpaperscraft.com/image/parking_underground_marking_118795_3840x2160.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 600px;
+    height: 500px;
+}
 
 //@@@@@@@@@@@@@@@@@@@@@@@@@--MODAL--@@@@@@@@@@@@@@@@@@@@@@@@@@@
 .modal-background {
